--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="resources/CSS/styles.css">
     <title>Excursion</title>
 </head>
 <body>
@@ -16,16 +16,16 @@
     </nav>
     <br>
     <section class = 'media video'>
-        <video src="excursion.mp4" autoplay muted loop></video>
+        <video src="resources/excursion.mp4" autoplay muted loop></video>
         <h1>Your personal travel guide</h1>
         <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
     </section>
     <section class = 'media image'>
-        <img src="camp.webp" alt="camp image">
+        <img src="resources/camp.webp" alt="camp image">
     </section>
     <br>
     <section>
-        <img src="phone.webp" alt="phone image">
+        <img src="resources/phone.webp" alt="phone image">
             <h2>Coming Soon for iPhone and Android</h2>
         <nav>
             <a href="#">Download Excursion (Coming soon!)</a>
